--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                 </div>
             </div>
 
+            <div class="card">
+                <h3 style="margin-bottom: 20px;">🌐 ネットワーク上のデバイス (<span id="peerCount">0</span>台)</h3>
+                <div id="peerList">
+                    <div class="empty-state">
+                        <div class="empty-icon">🔍</div>
+                        <div>ネットワークをスキャンしています...</div>
+                    </div>
+                </div>
+            </div>
+
             <div class="card" style="margin-top: 20px;">
                 <div class="header" style="margin-bottom: 10px;">
                     <h3>📜 送受信履歴</h3>
