feat: show version on UI and improve linux relaunch reliability (v2.8.0)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div class="card">
             <div class="header">
                 <div>
-                    <div class="title">📡 P2Pファイル共有 </div>
+                    <div class="title">📡 P2Pファイル共有 <span id="appVersion"
+                            style="font-size: 12px; opacity: 0.6; font-weight: normal; margin-left: 8px;"></span></div>
                     <div class="subtitle" id="statusText">待機中...</div>
                 </div>
                 <div class="status">
