--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P2Pファイル共有 v4.2.0</title>
+    <title>P2Pファイル共有 v4.3.0</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -104,6 +104,9 @@
                         onclick="document.getElementById('attachFolderInput').click()">
                         📁 フォルダを選択
                     </button>
+                    <button class="attach-btn attach-btn-screenshot" onclick="app.startScreenshotMode()">
+                        📷 スクリーンショット
+                    </button>
                 </div>
                 <div id="fileAttachPlaceholder" style="font-size:12px;color:#999;">
                     またはここにドラッグ&ドロップ
@@ -147,6 +150,17 @@
     <input type="file" id="fileInput" style="display: none;" multiple>
     <input type="file" id="attachFileInput" style="display: none;" multiple>
     <input type="file" id="attachFolderInput" style="display: none;" webkitdirectory directory multiple>
+
+    <!-- スクリーンショット用オーバーレイ -->
+    <div id="screenshotOverlay"
+        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999; background: black; cursor: crosshair;">
+        <canvas id="screenshotCanvas" style="display: block; width: 100%; height: 100%;"></canvas>
+        <div
+            style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); display: flex; gap: 10px;">
+            <button class="modal-btn action" onclick="app.confirmScreenshot()">✅ 確定</button>
+            <button class="modal-btn cancel" onclick="app.cancelScreenshot()">❌ キャンセル</button>
+        </div>
+    </div>
 
     <script src="renderer.js"></script>
 </body>
