--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P2Pファイル共有 v4.6.1</title>
+    <title>P2Pファイル共有</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
