feat: Resize to 400x400 and compact fonts further (v4.8.0)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="card">
-                <h3 style="margin-bottom: 20px;">🌐 ネットワーク上のデバイス (<span id="peerCount">0</span>台)</h3>
+                <h3 style="margin-bottom: 20px; font-size: 11px;">🌐 ネットワーク上のデバイス (<span id="peerCount">0</span>台)</h3>
                 <div id="peerList">
                     <div class="empty-state">
                         <div class="empty-icon">🔍</div>
