style: Further shrink text and icons for 400x400 layout (v4.8.1)

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
             <div class="card" style="margin-top: 20px;">
                 <div class="header" style="margin-bottom: 10px;">
-                    <h3>📜 送受信履歴</h3>
-                    <button class="btn-secondary" style="padding: 4px 8px; font-size: 12px;"
+                    <h3 style="font-size: 11px;">📜 送受信履歴</h3>
+                    <button class="btn-secondary" style="padding: 2px 4px; font-size: 6px;"
                         onclick="app.clearHistory()">クリア</button>
                 </div>
                 <div id="historyList" class="history-list">
