--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="modal-overlay" id="updateModal">
         <div class="modal-box">
             <div class="modal-title">✨ アップデートが利用可能です</div>
-            <div id="updateModalBody" style="margin: 15px 0; line-height: 1.6; color: #444;">
+            <div id="updateModalBody" style="margin: 10px 0; line-height: 1.4; color: #444; font-size: 11px;">
                 新しいバージョンが公開されました。クリックして更新を行い、アプリを再起動してください。
             </div>
             <div class="modal-buttons">
