--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P2Pファイル共有</title>
+    <title>ProxiPass</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="header">
                 <div>
-                    <div class="title">📡 P2Pファイル共有 <span id="appVersion"
+                    <div class="title">📡 ProxiPass <span id="appVersion"
                             style="font-size: 12px; opacity: 0.6; font-weight: normal; margin-left: 8px;"></span></div>
                     <div class="subtitle" id="statusText">待機中...</div>
                 </div>
