feat: Minimalist header and new app icon for ProxiPass (v4.9.0)

--- a/index.html
+++ b/index.html
@@ -11,16 +11,8 @@
 <body>
     <div class="container">
         <div class="card">
-            <div class="header">
-                <div>
-                    <div class="title">📡 ProxiPass <span id="appVersion"
-                            style="font-size: 12px; opacity: 0.6; font-weight: normal; margin-left: 8px;"></span></div>
-                    <div class="subtitle" id="statusText">待機中...</div>
-                </div>
-                <div class="status">
-                    <div class="status-dot"></div>
-                    <span>LAN検索中</span>
-                </div>
+            <div class="header" style="justify-content: center; margin-bottom: 5px;">
+                <div class="subtitle" id="statusText" style="font-size: 10px;">待機中...</div>
             </div>
 
             <div class="info-box">
